--- a/front/src/app/commons/picture-list-item/picture-list-item.component.html
+++ b/front/src/app/commons/picture-list-item/picture-list-item.component.html
@@ -1,1 +1,8 @@
-<p>picture-list-item works!</p>
+<div class="outer" (click)="handleClick()">
+  <div class="item">
+    <img [src]="src" />
+    <ng-container *ngIf="title">
+      <span class="title">{{ title }}</span>
+    </ng-container>
+  </div>
+</div>
